[project]
name = "asyntree"
version = "0.2.0"
description = "Syntax trees and file utilities."
authors = [
    {name = "Luke Miloszewski", email = "lukemiloszewski@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.0,<3.14.0"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/lukemiloszewski/asyntree"
Repository = "https://github.com/lukemiloszewski/asyntree"
Changelog = "https://github.com/lukemiloszewski/asyntree/releases"

[project.scripts]
asyntree = "asyntree.main:app"

[project.dependencies]
rich = ">=12.5.1,<13.0.0"
typer = ">=0.6.1,<0.7.0"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=3.0.0",
    "typeguard>=2.13.3",
]

[tool.coverage.paths]
source = ["src"]
tests = ["tests"]

[tool.coverage.run]
branch = true
source = ["asyntree"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = [
  "*/*init*",
]

[build-system]
requires = ["uv_build>=0.7.5,<0.8.0"]
build-backend = "uv_build"
